<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:context=".ui.activity.LoginActivity">

    <EditText
            android:id="@+id/editText_user"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/login_user"
            android:inputType="text"
            android:maxLength="8"
            app:layout_constraintTop_toBottomOf="@+id/text_logo"
            app:layout_constraintBottom_toTopOf="@+id/editText_pass"
            app:layout_constraintStart_toStartOf="@+id/editText_pass"
            app:layout_constraintEnd_toEndOf="@+id/editText_pass" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginRight="16dp" android:layout_marginEnd="16dp"/>

    <EditText
            android:id="@+id/editText_pass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/login_pass"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/editText_user"
            app:layout_constraintBottom_toTopOf="@+id/btn_login" app:layout_constraintStart_toStartOf="@+id/btn_login"
            app:layout_constraintEnd_toEndOf="@+id/btn_login" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginRight="16dp" android:layout_marginEnd="16dp"/>

    <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_btn"
            android:text="@string/login_btn"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="16dp" android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/editText_pass"
            app:layout_constraintHorizontal_bias="0.5" android:layout_marginTop="16dp"/>

    <TextView
            android:id="@+id/text_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="60sp"
            android:fontFamily="@font/alfa_slab_one" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/editText_user"
            app:layout_constraintStart_toStartOf="@+id/editText_user"
            app:layout_constraintEnd_toEndOf="@+id/editText_user" android:layout_marginBottom="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>