<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
                android:id="@+id/text_select_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transfers_account"
                app:layout_constraintBottom_toTopOf="@+id/spinner_accounts"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="16dp" android:layout_marginEnd="16dp" android:layout_marginTop="24dp"
                android:textSize="16sp" android:fontFamily="@font/alfa_slab_one"/>

        <Spinner
                android:id="@+id/spinner_accounts"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintBottom_toTopOf="@+id/text_amount"
                app:layout_constraintTop_toBottomOf="@+id/text_select_account"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="16dp" android:layout_marginEnd="16dp" android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"/>

        <TextView
                android:id="@+id/text_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transfers_amount"
                app:layout_constraintBottom_toTopOf="@+id/editText_amount"
                app:layout_constraintTop_toBottomOf="@+id/spinner_accounts"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="16dp" android:layout_marginEnd="16dp"
                android:fontFamily="@font/alfa_slab_one" android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" android:textSize="16sp"/>

        <EditText
                android:id="@+id/editText_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                app:layout_constraintBottom_toTopOf="@+id/btn_generate_qr"
                app:layout_constraintTop_toBottomOf="@+id/text_amount"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="16dp" android:layout_marginEnd="16dp"/>

        <Button
                android:id="@+id/btn_generate_qr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_btn"
                android:text="@string/transfers_btn_generate_qr"
                app:layout_constraintBottom_toTopOf="@+id/image_qr"
                app:layout_constraintTop_toBottomOf="@+id/editText_amount"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="16dp" android:layout_marginEnd="16dp" android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"/>

        <ImageView
                android:id="@+id/image_qr"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/text_dest_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_generate_qr"
                tools:background="@android:color/black"
                tools:visibility="visible" android:layout_marginBottom="8dp"/>

        <TextView
                android:id="@+id/text_dest_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transfers_account_dest"
                app:layout_constraintBottom_toTopOf="@+id/spinner_dest_account"
                app:layout_constraintTop_toBottomOf="@+id/image_qr"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="16dp" android:layout_marginEnd="16dp" android:textSize="16sp"
                android:fontFamily="@font/alfa_slab_one" android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"/>

        <Spinner
                android:id="@+id/spinner_dest_account"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_scan_qr"
                app:layout_constraintTop_toBottomOf="@+id/text_dest_account"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="16dp" android:layout_marginEnd="16dp" android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

        <Button
                android:id="@+id/btn_scan_qr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transfers_btn_scan_qr"
                android:background="@drawable/rounded_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_dest_account"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="16dp" android:layout_marginEnd="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
